Enable language change ison on mobile, fix error on language change

--- a/src/app/containers/medical/medical.component.scss
+++ b/src/app/containers/medical/medical.component.scss
@@ -215,8 +215,4 @@ p.haveAnimate img{
 		    width: 13px;
 		    margin-top: -2px;
   }
-  
-  .box-details-medical .table tbody tr td:nth-child(2) {
-    width: 25%
-  }
 }
